--- a/app/views/static/documentation.html.haml
+++ b/app/views/static/documentation.html.haml
@@ -12,7 +12,7 @@
   * Python - `scraper.py`
 
   ### In what format do I write out the data I've scraped?
-  Write to a tabled `#{Morph::Database.sqlite_table_name}` in an sqlite database in the current
+  Write to a table `#{Morph::Database.sqlite_table_name}` in an sqlite database in the current
   working directory called `#{Morph::Database.sqlite_db_filename}`. How you do that and what fields you include is entirely up to you.
 
   ### What version of the language and what libraries do I have access to?
