--- a/app/views/alert_mailer/alert_email.text.erb
+++ b/app/views/alert_mailer/alert_email.text.erb
@@ -3,6 +3,11 @@ Morph is letting you know that
 
 <% @broken_runs.each do |run| %>
 <%= run.full_name %> errored
+<% if run.scraper.latest_successful_run_time %>
+It has been erroring for <%= time_ago_in_words(run.scraper.latest_successful_run_time) %>
+<% else %>
+It has never run successfully
+<% end %>
 Fix it: <%= scraper_url(run.scraper) %>
 
 <%= run.error_text.split("\n")[0..4].join("\n") %>
