--- a/app/views/scrapers/settings.html.haml
+++ b/app/views/scrapers/settings.html.haml
@@ -1,5 +1,6 @@
 - content_for :title, "Settings for #{@scraper.full_name}"
 %h1
+  Settings for
   = link_to @scraper.owner.to_param, @scraper.owner
   \/
   = link_to @scraper.name, @scraper
