--- a/app/views/runs/_console.html.haml
+++ b/app/views/runs/_console.html.haml
@@ -1,6 +1,8 @@
 - unless run.log_lines.empty?
-  %h3 Console output
-  %p Hint: Keep this to a minimum during normal use (so that things remain readable)
-  %pre
-    - run.log_lines.order(:number).each do |line|
-      = content_tag(:span, h(line.text).gsub("\n", "&#x000A;").html_safe, class: line.stream)
+
+  %h3{data: {toggle: "collapse", target: "#console"}} Console output 
+  #console.collapse{class: ("in" if open)}
+    %p Hint: Keep this to a minimum during normal use (so that things remain readable)
+    %pre
+      - run.log_lines.order(:number).each do |line|
+        = content_tag(:span, h(line.text).gsub("\n", "&#x000A;").html_safe, class: line.stream)
