--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -71,10 +71,8 @@ span.internal {
 
 #console_title:after {
     font-family: 'FontAwesome';
-    content: "\f078";
-    float: right;
-    color: gray;
+    content: "(hide)";
 }
 #console_title.collapsed:after {
-    content: "\f054";
+    content: "(show)";
 }
