Status and console output are right next to each other now. So, removing unnecessary message

--- a/app/views/runs/_status.html.haml
+++ b/app/views/runs/_status.html.haml
@@ -21,4 +21,4 @@
   .alert.alert-danger
     Last run failed
     = time_ago_in_words(run.finished_at)
-    ago with status code #{run.status_code}. See any console output below.
+    ago with status code #{run.status_code}.
