Rename finished runs to history

--- a/app/views/scrapers/_history.html.haml
+++ b/app/views/scrapers/_history.html.haml
@@ -1,5 +1,5 @@
 - unless @scraper.finished_runs.empty?
-  %h3 Finished Runs
+  %h3 History
 
   -# TODO Only show a limited number of the most recent runs
   %ul.list-group
