Put meta actions (like watch/unwatch) on level with name

--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -21,6 +21,12 @@
         = link_to @scraper.owner.to_param, @scraper.owner
         \/
         = link_to @scraper.name, @scraper
+    .col-md-2
+      - if signed_in?
+        .button_title_adjust= render partial: "watch_button", locals: {scraper: @scraper}
+  %hr
+  .row
+    .col-md-10
       %h4
         = @scraper.description
         = render partial: "auto_clock", locals: {scraper: @scraper}
@@ -44,7 +50,6 @@
       = render "statistics"
     .col-md-2
       - if signed_in?
-        .button_title_adjust= render partial: "watch_button", locals: {scraper: @scraper}
         = link_to "Settings", scraper_settings_path
         - if @scraper.can_write?(current_user)
           %p= button_to "Run it now!", run_scraper_path(@scraper), class: (!@scraper.runnable? ? "btn btn-primary btn-lg disabled" : "btn btn-primary"), disabled: !@scraper.runnable?
