--- a/app/views/scrapers/_watch_button.html.haml
+++ b/app/views/scrapers/_watch_button.html.haml
@@ -1,6 +1,12 @@
 - if current_user.indirectly_watching?(scraper)
-  = button_to "Unwatch", "#", class: "btn btn-default", disabled: "disabled"
+  = button_to "#", class: "btn btn-default", disabled: "disabled" do
+    %i.icon-eye-close
+    Unwatch
 - elsif current_user.watching?(scraper)
-  = button_to "Unwatch", scraper_watch_path(scraper), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Stop receiving alerts for this scraper"}
+  = button_to scraper_watch_path(scraper), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Stop receiving alerts for this scraper"} do
+    %i.icon-eye-close
+    Unwatch
 - else
-  = button_to "Watch", scraper_watch_path(scraper), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Receive alerts when this scraper errors"}
+  = button_to scraper_watch_path(scraper), class: "btn btn-default has-tooltip", data: {placement: "bottom", title: "Receive alerts when this scraper errors"} do
+    %i.icon-eye-open
+    Watch
