--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -50,7 +50,9 @@
       = render "statistics"
     .col-md-2
       - if signed_in?
-        = link_to "Settings", scraper_settings_path
+        = link_to scraper_settings_path, class: "btn btn-default" do
+          %i.icon-wrench
+          Settings
         - if @scraper.can_write?(current_user)
           %p= button_to "Run it now!", run_scraper_path(@scraper), class: (!@scraper.runnable? ? "btn btn-primary btn-lg disabled" : "btn btn-primary"), disabled: !@scraper.runnable?
 
