--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -51,7 +51,7 @@
     .col-md-2
       - if signed_in?
         - if @scraper.can_write?(current_user)
-          %p= button_to "Run it now!", run_scraper_path(@scraper), class: (!@scraper.runnable? ? "btn btn-primary btn-lg disabled" : "btn btn-primary"), disabled: !@scraper.runnable?
+          %p= button_to "Run it now!", run_scraper_path(@scraper), class: ("btn btn-primary " + (@scraper.runnable? ? "" : "disabled")), disabled: !@scraper.runnable?
         = link_to scraper_settings_path, class: "btn btn-default" do
           %i.icon-wrench
           Settings
