--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -85,3 +85,15 @@ pre {
 #scraper_code {
   margin-top: 5em;
 }
+
+// Workaround for copy to clipboard
+#copy_to_clipboard_button.zeroclipboard-is-hover {
+  background-color:#ebebeb;
+  border-color: #adadad;
+}
+#copy_to_clipboard_button.zeroclipboard-is-active {
+  background-color:#ebebeb;
+  border-color: #adadad;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+}
