When looking at someone else's scraper the code section should be at the top

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -82,8 +82,12 @@ pre {
   overflow-y: scroll;
 }
 
-#scraper_code {
-  margin-top: 5em;
+#scraper_settings {
+  margin-bottom: 4em;
+}
+
+#scraper_run {
+  margin-bottom: 2em
 }
 
 // Workaround for copy to clipboard
