Improve urls for creating scraper from github and scraperwiki

--- a/app/views/scrapers/scraperwiki.html.haml
+++ b/app/views/scrapers/scraperwiki.html.haml
@@ -11,7 +11,7 @@
     = link_to "Browse and Search", "https://classic.scraperwiki.com/browse/", target: "_blank"
     for a scraper on ScraperWiki Classic that you want to fork. Then paste the name of the scraper below.
 
-= semantic_form_for @scraper, url: scraperwiki_forks_path do |f|
+= semantic_form_for @scraper, url: scraperwiki_scrapers_path do |f|
   = f.inputs do
     .row
       .col-sm-8
