--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -72,7 +72,7 @@
               %h5 Main scraper
               #{link_to @scraper.main_scraper_filename, @scraper.github_url_main_scraper_file, target: "_blank"}
               &mdash;
-              written in #{@scraper.language}
+              written in #{Morph::Language.human(@scraper.language)}
       %p
         .form-group
           %label(for="git_url") git clone URL
