--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,8 +37,9 @@
                 Add Scraper
                 %b(class="caret")
               %ul(class="dropdown-menu")
-                %li= link_to "Add scraper from GitHub", github_new_scraper_path
+                %li= link_to "New scraper", new_scraper_path
                 %li(class="divider")
+                %li= link_to "Add scraper from GitHub", github_new_scraper_path
                 %li= link_to "Fork scraper from Scraperwiki", scraperwiki_new_scraper_path
             %li= link_to "API", api_path
             %li= link_to "Documentation", documentation_path
