--- a/app/views/scrapers/show.html.haml
+++ b/app/views/scrapers/show.html.haml
@@ -24,14 +24,13 @@
             = render partial: "auto_clock", locals: {scraper: @scraper}
           - if @scraper.queued? || @scraper.running?
             .pulse
+        %h4= @scraper.description
     .col-md-2
       - if signed_in?
         .button_title_adjust= render partial: "watch_button", locals: {scraper: @scraper}
   %hr
   .row
     .col-md-10
-      %h4
-        = @scraper.description
       - if @scraper.readme
         .panel.panel-default
           .panel-heading
