--- a/app/views/owners/show.html.haml
+++ b/app/views/owners/show.html.haml
@@ -1,9 +1,15 @@
 - content_for :title, @owner.nickname
 .row
+  .col-md-11
+    %h1= @owner.nickname
+    %h4= @owner.name
+  .col-md-1
+    - if signed_in?
+      .button_title_adjust= render partial: "watch_button", locals: {owner: @owner}
+%hr
+.row
   .col-md-3
     = image_tag @owner.gravatar_url, class: "img-responsive img-thumbnail"
-    %h1= @owner.name
-    %h2= @owner.nickname
     %ul.list-unstyled
       - unless @owner.company.blank?
         %li= @owner.company
@@ -30,7 +36,7 @@
       %div
         = link_to "Show your key", user_settings_path, class: "btn btn-default"
 
-  .col-md-8
+  .col-md-9
     - if @owner.user?
       %p
         - if @owner.alerts.empty?
@@ -63,6 +69,4 @@
         = number_to_human_size @owner.scrapers.sum(&:total_disk_usage)
 
   .col-md-1
-    - if signed_in?
-      .button_title_adjust= render partial: "watch_button", locals: {owner: @owner}
 
