--- a/app/views/scrapers/scraperwiki.html.haml
+++ b/app/views/scrapers/scraperwiki.html.haml
@@ -26,7 +26,7 @@
             %span.help-block The name (as it's shown in a url) of the ScraperWiki Classic scraper that you want to fork
     .row
       .col-sm-2
-        = f.input :owner, collection: ([current_user] + current_user.organizations).map{|o| [o.nickname, o.id]}, include_blank: false
+        = f.input :owner, collection: current_user.all_owners.map{|o| [o.nickname, o.id]}, include_blank: false
       .col-sm-6
         .string.input.optional.stringish.form-group#scraper_name_input{class: ("error has-error" unless @scraper.errors[:name].empty?)}
           %label.control-label(for="scraper_name") Name
