--- a/app/views/static/api.html.haml
+++ b/app/views/static/api.html.haml
@@ -62,10 +62,17 @@
       $("code span.query").html(encodeURIComponent($("#query").val()));
     }
 
+    function update_api_key() {
+      api_key = $("#owner").val();
+      $("#api_key").html(api_key);
+      $("code span.api_key").html(api_key);
+    }
+
     update_full_name();
     update_query();
     $("#scraper_full_name").change(update_full_name);
     $("#scraper_full_name").keyup(update_full_name);
     $("#query").change(update_query);
     $("#query").keyup(update_query);
+    $("#owner").change(update_api_key);
   });
