--- a/app/views/scrapers/_data.html.haml
+++ b/app/views/scrapers/_data.html.haml
@@ -1,9 +1,12 @@
 - if @rows && !@rows.empty?
   %h3 Data
   %p
+    - unless signed_in?
+      To download data
+      = link_to "sign in with GitHub", user_omniauth_authorize_path(:github), class: "btn btn-default"
     .btn-group
-      = link_to "Download table (as CSV)", scraper_data_path(@scraper, :format => :csv), class: "btn btn-default"
-      = link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), class: "btn btn-default"
+      = link_to "Download table (as CSV)", scraper_data_path(@scraper, :format => :csv), class: "btn btn-default", disabled: !signed_in?
+      = link_to "Download SQLite database", scraper_data_path(@scraper, :format => :sqlite), class: "btn btn-default", disabled: !signed_in?
       = link_to "Use the API", api_path(scraper: @scraper.full_name), class: "btn btn-default"
   %p rows #{[10, @scraper.database.no_rows].min} / #{@scraper.database.no_rows} (#{number_to_human_size @scraper.database.sqlite_db_size})
   .table-responsive.scraper-data
