--- a/app/views/static/api.html.haml
+++ b/app/views/static/api.html.haml
@@ -5,7 +5,7 @@
 
 %pre
   %code
-    GET #{api_url_in_html(content_tag(:em, "[scraper]"), content_tag(:em, "[sql]"))}
+    GET #{api_url_in_html(content_tag(:em, "[scraper]"), content_tag(:em, "[format]"), content_tag(:em, "[sql]"))}
 
 %p With a simple header for authentication
 
@@ -29,6 +29,13 @@
         %span.help-block
           The SQL query to perform on the SQLite database that is the output of the scraper (e.g. "#{@query}").
           Ensure it is #{link_to "url encoded", "https://en.wikipedia.org/wiki/Percent-encoding"}.
+    .string.input.optional.stringish.form-group#format_input
+      %label.control-label.col-sm-1(for="format") [format]
+      .col-sm-3
+        %select.form-control#format(name="format")
+          = options_for_select(["json", "csv"])
+        %span.help-block
+          Format of outputted data
     - if current_user
       .row
         .col-sm-6
@@ -60,9 +67,9 @@
 %pre
   %code
     - if current_user
-      = curl_command(content_tag(:span, current_user.api_key, class: "api_key"), content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, CGI::escape(@query), class: "query"))
+      = curl_command(content_tag(:span, current_user.api_key, class: "api_key"), content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), content_tag(:span, CGI::escape(@query), class: "query"))
     - else
-      = curl_command(content_tag(:em, "[api_key]"), content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, CGI::escape(@query), class: "query"))
+      = curl_command(content_tag(:em, "[api_key]"), content_tag(:span, @scraper.full_name, class: "full_name"), content_tag(:span, "json", class: "format"), content_tag(:span, CGI::escape(@query), class: "query"))
 
 :javascript
   $(function() {
@@ -80,11 +87,19 @@
       $("code span.api_key").html(api_key);
     }
 
+    function update_format() {
+      $("code span.format").html($("#format").val());      
+    }
+
     update_full_name();
     update_query();
+    update_api_key();
+    update_format();
+
     $("#scraper_full_name").change(update_full_name);
     $("#scraper_full_name").keyup(update_full_name);
     $("#query").change(update_query);
     $("#query").keyup(update_query);
     $("#owner").change(update_api_key);
+    $("#format").change(update_format);
   });
