Add link to waffle.io in footer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -74,3 +74,6 @@
           %li
             %i.icon-bug
             = link_to "Report an issue or suggest a feature", "https://github.com/openaustralia/morph/issues?state=open", target: "_blank"
+          %li
+            %i.icon-bug
+              = link_to "Development priorities on waffle.io", "https://waffle.io/openaustralia/morph", target: "_blank"
