Simplify display of stats in history

--- a/app/views/runs/_history.html.haml
+++ b/app/views/runs/_history.html.haml
@@ -1,4 +1,4 @@
-- cache ["v1", run] do
+- cache ["v2", run] do
   %li.list-group-item{class: run.finished_successfully? ? "alert-success" : "alert-danger"}
     - if run.auto?
       Auto
@@ -16,12 +16,5 @@
     = time_ago_in_words(run.finished_at)
     ago
     .pull-right
-      - if run.metric
-        real / cpu time:
-        = "%.1f s" % run.wall_time
-        \/
-        = "%.1f s" % run.metric.cpu_time
-        max memory:
-        = number_to_human_size(run.metric.maxrss * 1024)
-      - else
-        real time: #{"%.1f s" % (run.finished_at - run.started_at)}
+      run time
+      = "%.1f s" % run.wall_time
