Make morph logo scale nicely down to mobile

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -2,7 +2,7 @@
 .jumbotron
   .row
     .col-md-4
-      = image_tag "logo.png", size: "300x300"
+      = image_tag "logo.png", size: "300x300", class: "img-responsive"
     .col-md-8
       %h1
         Morph
