--- a/app/views/scrapers/_scraper.html.haml
+++ b/app/views/scrapers/_scraper.html.haml
@@ -1,13 +1,14 @@
-- cache ["v1", scraper] do
+- cache ["v2", scraper] do
   = link_to scraper, class: "list-group-item" do
-    .icon-box.pull-right
-      - if scraper.last_run && (scraper.last_run.queued? || scraper.last_run.running?)
-        .pulse
-    .icon-box.pull-right
-      = render partial: "scrapers/auto_clock", locals: {scraper: scraper}
-    - if scraper.last_run && scraper.last_run.finished_with_errors?
-      %span.label.label-danger errored
-    %strong= scraper.full_name
-    %div
-      - unless scraper.description.blank?
-        = scraper.description
+    %div.scraper-block
+      .icon-box.pull-right
+        - if scraper.last_run && (scraper.last_run.queued? || scraper.last_run.running?)
+          .pulse
+      .icon-box.pull-right
+        = render partial: "scrapers/auto_clock", locals: {scraper: scraper}
+      - if scraper.last_run && scraper.last_run.finished_with_errors?
+        %span.label.label-danger errored
+      %strong.full_name= scraper.full_name
+      %div
+        - unless scraper.description.blank?
+          = scraper.description
