Hide the run stat on mobiles

--- a/app/views/runs/_history.html.haml
+++ b/app/views/runs/_history.html.haml
@@ -15,6 +15,6 @@
       failed
     = time_ago_in_words(run.finished_at)
     ago
-    .pull-right
+    .pull-right.hidden-xs
       run time
       = "%.1f s" % run.wall_time
