Load list of your github repositories using ajax

--- a/app/views/scrapers/github.html.haml
+++ b/app/views/scrapers/github.html.haml
@@ -9,5 +9,12 @@
 
 -# TODO Don't show repos that we've already added
 
-#github_form= render "github_form"
+#github_form
+  %h3
+    %i.icon-github.icon-2x.icon-spin
+    Getting your repositories from GitHub&hellip;
 
+:javascript
+  $(document).ready(function(){
+    $("#github_form").load("#{github_form_scrapers_path}")
+  });
