--- a/app/views/scrapers/github.html.haml
+++ b/app/views/scrapers/github.html.haml
@@ -12,7 +12,7 @@
 #github_form
   %h3
     %i.icon-github.icon-2x.icon-spin
-    Getting your repositories from GitHub&hellip;
+    Hang on. Getting your repositories from GitHub&hellip;
 
 :javascript
   $(document).ready(function(){
