A one liner on what Morph does

--- a/app/views/static/index.html.haml
+++ b/app/views/static/index.html.haml
@@ -12,6 +12,7 @@
           = link_to "Heroku", "https://www.heroku.com/"
           for
           = link_to "Scrapers", "https://en.wikipedia.org/wiki/Web_scraping"
+      %h2 Get structured data out of the web
       %ul.list-unstyled
         %li
           All code and collaboration through
