--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,7 +41,7 @@
                 %li(class="divider")
                 %li= link_to "Add scraper from GitHub", github_new_scraper_path
                 %li= link_to "Fork scraper from Scraperwiki", scraperwiki_new_scraper_path
-            %li= link_to "API", api_path
+            %li= link_to "API", api_documentation_index_path
             %li= link_to "Documentation", documentation_index_path
             - if user_signed_in? && current_user.admin?
               %li= link_to "Admin", "/admin/jobs", data: {"no-turbolink" => true}
